# dog-pet

./: .gitignore  README.md  pyproject.toml
src/: client.py
src/adapter/: __init__.py  dogapi_httpx_client.py
src/adapters/: dogapi_httpx_client.py
src/config/: __init__.py  env.py
src/exception/: __init__.py  client.py  serialization.py
src/interface/: __init__.py  http_client.py
src/interfaces/: http_client.py
src/model/: breed.py  fact.py  group.py
src/service/: __init__.py  breed.py  fact.py  group.py
src/shared/: serializer.py
